--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Welcome to the Music Encyclopedia</h1>
+<h2>Search for an artist in our database and we will tell you all you need to know about that artist!</h2>
+<h2>You can also search for lyrics of a specific song from that artist!!! </h2>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
