--- a/Pages/SearchArtist.razor
+++ b/Pages/SearchArtist.razor
@@ -19,8 +19,6 @@
     </button>
 </div>
 
-<h5 style="color: red">@errorMessage</h5>
-
 @if (allArtists2 == null)
 {
 }
@@ -57,6 +55,8 @@ else
                     <i class="oi oi-magnifying-glass"></i>
                 </button>
             </div>
+            <br />
+            <br />
 
             @if (lyrics == null)
             {
@@ -74,7 +74,7 @@ else
                 {
                     developerErrorMessage = e.Message;
                     Console.WriteLine(developerErrorMessage);
-
+                    ErrorMessage = "Lyrics Not Found";
                 }
             }
         }
@@ -84,10 +84,12 @@ else
     {
         developerErrorMessage = e.Message;
         Console.WriteLine(developerErrorMessage);
-        errorMessage = "There is no Artist in our Database with that name, Please spell the artist correctly";
+        ErrorMessage = "There is no Artist in our Database with that name, Please spell the artist correctly";
 
     }
 }
+
+<h5 style="color: red">@ErrorMessage</h5>
 
 
 
@@ -95,7 +97,7 @@ else
 @code {
 
     private string developerErrorMessage = "Nothing";
-    private string errorMessage { get; set; }
+    private string ErrorMessage { get; set; }
     private string ArtistValue { get; set; } = "blazor";
     private string SongValue { get; set; }
 
@@ -182,10 +184,16 @@ else
             using var httpResponse = await Http.GetAsync("https://api.lyrics.ovh/v1/" + ArtistValue + "/" + SongValue);
             l1 = await httpResponse.Content.ReadFromJsonAsync<Lyrics>();
             lyrics = l1.lyrics;
+
+            if (l1 != null)
+            {
+                ErrorMessage = " ";
+            }
         }
         catch (Exception e)
         {
             developerErrorMessage = e.Message;
+            ErrorMessage = "Lyrics Not Found";
         }
 
     }
@@ -207,7 +215,7 @@ else
 
             if (allArtists != null)
             {
-                errorMessage = " ";
+                ErrorMessage = " ";
             }
 
 
@@ -216,7 +224,7 @@ else
         {
             developerErrorMessage = e.Message;
             Console.WriteLine(developerErrorMessage);
-            errorMessage = "There is no Artist in our Database with that name, Please spell the artist correctly";
+            ErrorMessage = "There is no Artist in our Database with that name, Please spell the artist correctly";
 
         }
 
